workspace-sf/force-app/main/default/objects/Territorio_Event__e/Territorio_Event__e.object-meta.xml
<CustomObject>
    <label>Territorio Event</label>
    <pluralLabel>Territorio Events</pluralLabel>
</CustomObject>