workspace-sf/force-app/main/default/objects/Territorio_Event__e/fields/Continente__c.field-meta.xml
<CustomField>
    <fullName>Continente__c</fullName>
    <label>Continente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>