workspace-sf/force-app/main/default/objects/Territorio_Event__e/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>