workspace-sf/force-app/main/default/objects/Territorio_Event__e/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <label>GarantiaProduto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>