workspace-sf/force-app/main/default/objects/Territorio_Event__e/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>