workspace-sf/force-app/main/default/objects/Territorio_Event__e/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <label>Territorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>